--- a/src/App.css
+++ b/src/App.css
@@ -77,3 +77,42 @@ h1{
 
 
 
+.dropdown{
+  width:400px;
+  margin: 100px auto;
+  position:relative;
+}
+
+.dropdown .dropdown-btn{
+  padding:15px 20px;
+  background: #fff;
+  box-shadow:3px 3px 10px 6px rgba(0,0,0,0.06);
+  font-weight:bold;
+  display:flex;
+  align-items:center;
+  justify-content: space-between;
+}
+
+.dropdown .dropdown-content{
+  position:absolute;
+  top:110%;
+  padding:10px;
+  background:#ffff;
+  font-weight: 500;
+  width:95%
+
+
+}
+
+.dropdown .dropdown-content .dropdown-item{
+  padding: 10px;
+  cursor: pointer;
+  transition: all 0.2s;
+
+}
+
+.dropdown .dropdown-content .dropdown-item:hover{
+  background:
+}
+
+
