--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,20 @@
 .App {
   text-align: center;
   background-image: url(https://www.wallpaperup.com/uploads/wallpapers/2017/03/26/1083160/c1864ac7017cf8f0c6805d60d1a7cbcb-1000.jpg);
-  height:100vh
+  height: 100vh
 }
 
-.links *{
+.links * {
   list-style-type: none;
   margin-top: 0 auto;
   text-decoration: none;
-  color:blue;
+  color: blue;
 }
 
-.links{
+.links {
   overflow: hidden;
   background-color: #333;
-  margin-top:0;
+  margin-top: 0;
   font-family: 'Open Sans', sans-serif;
 }
 
@@ -27,101 +27,99 @@
   text-decoration: none;
 }
 
-.links a:hover{
+.links a:hover {
   background-color: #ddd;
   color: black;
 }
 
-.card{
-  display:flex;
+.card {
+  display: flex;
   flex-direction: column;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  width:30%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  width: 30%;
   justify-content: space-evenly;
-  background-image: linear-gradient(to left, rgba(255,0,0,0), rgba(255,0,0,1));
+  background-image: linear-gradient(to left, rgba(255, 0, 0, 0), rgba(255, 0, 0, 1));
   margin-bottom: 2em;
-  
+
 }
 
-.card:hover{
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
-.container{
-  list-style-type:none;
-  display:flex;
+.container {
+  list-style-type: none;
+  display: flex;
   justify-content: center;
   flex-direction: column;
   padding: 2px 16px;
-  
+
 }
 
-.routineCard{
-  display:flex;
+.routineCard {
+  display: flex;
   flex-direction: column;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  width:30%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  width: 30%;
   justify-content: space-evenly;
 }
 
-form{
-  height:75vh;
+form {
+  height: 75vh;
   overflow-y: scroll;
-  
-  
+
+
 }
 
-h1{
+h1 {
   font-family: 'Open Sans', sans-serif;
 }
 
 
 
-.dropdown{
-  width:400px;
+.dropdown {
+  width: 400px;
   margin: 100px auto;
-  position:relative;
+  position: relative;
 }
 
-.dropdown .dropdown-btn{
-  padding:15px 20px;
+.dropdown .dropdown-btn {
+  padding: 15px 20px;
   background: #fff;
-  box-shadow:3px 3px 10px 6px rgba(0,0,0,0.06);
-  font-weight:bold;
-  display:flex;
-  align-items:center;
+  box-shadow: 3px 3px 10px 6px rgba(0, 0, 0, 0.06);
+  font-weight: bold;
+  display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 
-.dropdown .dropdown-content{
-  position:absolute;
-  top:110%;
-  padding:10px;
-  background:#ffff;
+.dropdown .dropdown-content {
+  position: absolute;
+  top: 110%;
+  padding: 10px;
+  background: #ffff;
   font-weight: 500;
-  width:95%
-
-
+  width: 95%
 }
 
-.dropdown .dropdown-content .dropdown-item{
+.dropdown .dropdown-content .dropdown-item {
   padding: 10px;
   cursor: pointer;
   transition: all 0.2s;
 
 }
 
-.dropdown .dropdown-content .dropdown-item:hover{
+.dropdown .dropdown-content .dropdown-item:hover {
   background:
 }
 
 
-.act{
-  height:75vh;
+.act {
+  height: 75vh;
   overflow-y: scroll;
 }
 
 
-li{
+li {
   list-style: none;
 }
