--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
   margin: 0;
+  padding: 0;
+  background-image: url(https://www.wallpaperup.com/uploads/wallpapers/2017/03/26/1083160/c1864ac7017cf8f0c6805d60d1a7cbcb-1000.jpg);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
